# qcrew

./: .gitignore  .pylintrc  LICENSE  README.md  README.rst  config.npz  cpacurrent_plot.html  cpadp_plot.html  cpaerr_plot.html  cpahours_plot.html  cpahp_plot.html  cpahpa_plot.html  cpalp_plot.html  cpalpa_plot.html  cparun_plot.html  cpascale_plot.html  cpasn_plot.html  cpastate_plot.html  cpatemph_plot.html  cpatempo_plot.html  cpatempwi_plot.html  cpatempwo_plot.html  cpawarn_plot.html  ctr_pressure_ok_plot.html  ctrl_pres_ok_plot.html  ctrl_pres_plot.html  nxdsbs_plot.html  nxdsct_plot.html  nxdsf_plot.html  nxdspt_plot.html  nxdst_plot.html  nxdstrs_plot.html  pyproject.toml  run_IDE.bat  setup.py  setup_stage.bat  tc400actualspd_plot.html  tc400drvpower_plot.html  tc400pumpstatn_plot.html  tc400standby_plot.html  (+1 more)
configs/coax_a/: instruments.yml  modes.yml
docs/source/: conf.py  index.rst
qcrew.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qcrew/analysis/: funclib.py
qcrew/analyze/: fit.py  plotter.py  plotter_test.py  stats.py
qcrew/control/: __init__.py  intern.py  professor.py  stage.py
qcrew/helpers/: __init__.py  datasaver.py  dc_offset.py  discriminator.py  errorhandler.py  fetcher.py  (+13 more)
results/: cheddar_alice_fitting.txt  cheddar_bob_fitting.txt  cheddar_charlie_fitting.txt
scripts/: run_IDE.bat  setup_stage.bat  teardown_stage.bat
tests/: demo_20210527.py  stage_20210527.py  test_20210707.py  test_client.py  test_config.yml  test_drag.py  test_imports.py  test_instruments.py  test_instruments.yml  test_labbrick.py  test_measurement_run.py  test_mixer_tuner.py  test_mode.py  test_modes.py  test_modes.yml  test_pulses.py  test_qcb.py  test_qcrew_rl.py  test_qua_contexts.py  test_sa124.py  test_server.py  test_stage.yml  test_stage_stagehand.py  test_stagehand.py  test_yaml_round_trip.py
(+745 files in other folders)
