[tool.poetry]
name = "qcrew"
version = "0.1.0"
description = ""
authors = ["Atharv Joshi <atharvjoshi@ymail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^1.20.0"
PyYAML = "^5.4.1"
dash-bootstrap-components = "^0.12.2"
loguru = "^0.5.3"
rpyc = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b0"
Sphinx = "^3.5.4"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
