[tool.poetry]
name = "qcrew"
version = "0.1.0"
description = "The codebase for running circuit QED experiments in QCREW's lab"
authors = ["QCREW <hello.qcrew@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
loguru = "^0.5.3"
numpy = "^1.21.0"
Pyro5 = "^5.12"
qm = { url = "https://qm-pypi-repository.s3.amazonaws.com/qm-0.90.1736.tar.gz" }
matplotlib = "^3.4.2"
scipy = { version = "^1.7.0", python = ">=3.9, <3.10" }
ipython = "^7.25.0"
h5py = "^3.3.0"
ipykernel = "^6.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b0"
Sphinx = "^3.5.4"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
